[package]
name = "mem_btree"
version = "0.2.1"
edition = "2021"
authors = ["Ansj <ansj-sun@163.com>"]
license = "MIT OR Apache-2.0"
categories = ["snapshot", "btree", "concurrency"]
description = "A Data Structure of BTree Implemented with Rust, support snapshot. not use any unsafe lib."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[dev-dependencies]
memory-stats = "1.0.0"
rand = "0.8.5"


[[example]]
name = "bench"


[[example]]
name = "example"
